--- a/404.html
+++ b/404.html
@@ -8,17 +8,18 @@
 	<title>newJobSite_5.3.2</title>
 
 
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		// Перенаправление на корневую страницу, чтобы SPA могла обработать URL
 		window.location.replace('/');
-	</script>
+	</script> -->
 
 
 </head>
 
 <body>
-	<div id="root"></div>
-	<script type="module" src="/src/main.tsx"></script>
+	<!-- <div id="root"></div> -->
+	<p>ТЕСТ</p>
+	<!-- <script type="module" src="/src/main.tsx"></script> -->
 </body>
 
 </html>
