--- a/src/404.html
+++ b/src/404.html
@@ -8,10 +8,10 @@
 	<title>newJobSite_5.3.2</title>
 
 
-	<!-- <script type="text/javascript">
+	<script type="text/javascript">
 		// Перенаправление на корневую страницу, чтобы SPA могла обработать URL
 		window.location.replace('/');
-	</script> -->
+	</script>
 
 
 </head>
